# biome

./: CMakeLists.txt  README.md  project.json  run.sh
etc/scenes/: agent_scratchpad.flecs  biome.flecs  hud.flecs  player.flecs  test_power.flecs
flecs-engine/: .gitignore  CMakeLists.txt  project.json  test.sh
flecs-engine/etc/: assets
flecs-engine/include/: flecs_engine.h
flecs-engine/projects/flecs/: CMakeLists.txt  project.json
flecs-engine/projects/flecs/include/flecs_app/: bake_config.h
flecs-engine/projects/flecs/src/: main.c
flecs-engine/src/: platform.c  tracy_os_api.c  utils.c  utils.h  webgpu_utils.c  wgpu_compat.h
flecs-engine/test/: project.json
include/: biome.h
include/biome/: bake_config.h  behavior.h  building_rule.h  buildings.h  cloud.h  factory.h  ghost.h  logistics.h  miner.h  placement.h  plant.h  player.h  power.h  precipitation.h  resources.h  terrain.h  terrain_item_index.h  tool.h  ui.h  water.h  weather.h  wind.h
src/: main.c
src/modules/: behavior.c  building_rule.c  buildings.c  cloud.c  condensation.h  evaporation.h  factory.c  ghost.c  logistics.c  miner.c  placement.c  plant.c  player.c  power.c  precipitation.c  radiative_balance.h  resources.c  terrain.c  terrain_item_index.c  thermal_exchange.h  tool.c  ui.c  water.c  water_shader.h  weather.c  weather_aggregate.h  weather_model.h  weather_ocean.h  weather_seed.h  weather_wind.h  wind.c
src/tasks/: logistics.c  logistics.h
test/: project.json
test/include/: biome.h  biome_test.h
test/src/: BuildingRule.c  (+7 more)
tools/: cloud_emitter_model.c  weather_model.c
(+670 files in other folders)
